Fixed alignment

--- a/src/components/PostsContainer/Posts.css
+++ b/src/components/PostsContainer/Posts.css
@@ -4,7 +4,7 @@
   min-width: 400px;
   margin: 5px auto;
 }
-.post-header{
+.post-header {
   display: flex;
   align-items: center;
 }
@@ -47,7 +47,7 @@
 .like-section-wrapper {
   height: 10px;
   width: 10px;
-  margin: 10px;
+  margin: 12px;
 }
 .like-number {
   width: 100px;
